--- a/freeMarkerDemo/ftl/freemarker.html
+++ b/freeMarkerDemo/ftl/freemarker.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 ${hello}
+<!-- 演示遍历List数据     -->
+<#list personList as person>
+	获取遍历的索引:${person_index}
+	<#if person_index==0>
+	   这是第${person_index+1}次循环
+    <#else>
+	 这是第${person_index+1}次循环
+	</#if>
+</#list>
 </body>
 </html>
