--- a/freeMarkerDemo/hello.html
+++ b/freeMarkerDemo/hello.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 hello world
+<!-- 演示遍历List数据     -->
+	获取遍历的索引:0
+	   这是第1次循环
+	获取遍历的索引:1
+	 这是第2次循环
+	获取遍历的索引:2
+	 这是第3次循环
+	获取遍历的索引:3
+	 这是第4次循环
 </body>
 </html>
