--- a/freeMarkerDemo/hello.html
+++ b/freeMarkerDemo/hello.html
@@ -15,5 +15,10 @@ hello world
 	 这是第3次循环
 	获取遍历的索引:3
 	 这是第4次循环
+<!-- 演示遍历Map数据 -->
+  key===== 004   value====白骨精
+  key===== 001   value====悟空
+  key===== 002   value====八戒
+  key===== 003   value====悟能
 </body>
 </html>
